--- a/templates/apriltable.html
+++ b/templates/apriltable.html
@@ -23,15 +23,15 @@
             <span class="icon-bar"></span>
           </button>
           <div class="col-xs-9 phone-nav">
-            <a class="navbar-brand" href="index.html" id="logo">Home</a>
+            <a class="navbar-brand" href="/" id="logo">Home</a>
           </div>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right navbar-right-custom">
-            <li><a href="visualizations.html">Visualizations</a></li>
-            <li><a href="ml.html">Predictive Analysis</a></li>
-            <li><a href="AprilTable.html">Data Source</a></li>
+            <li><a href="visualizations">Visualizations</a></li>
+            <li><a href="ml">Predictive Analysis</a></li>
+            <li><a href="april_table">Data Source</a></li>
           </ul>
         </div>
       </div>
