--- a/templates/ml.html
+++ b/templates/ml.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>NYC Motor Vehicle Crashes - April 2020</title>
+  <title>Deeper Learning - NYC Motor Vehicle Crashes</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
 
@@ -32,9 +32,10 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 <!--JQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="static/js/event.js"></script>
 <!--Chart JS-->
-  <script src="static/js/bar.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/bar.js"></script>
+  <script src="static/js/button.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/button.js"></script>
 <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 <!--JS-->
@@ -62,8 +63,9 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/bar.js"></script>
-  <script src="static/js/pie.js"></script>
+  <script src="static/js/button.js"></script>
+  <script src="static/js/event.js"></script>
+  <script src="static/js/areachart.js"></script>
   <script src="static/js/map.js"></script> 
   <script type="text/javascript" src="static/js/config.js"></script>
 
@@ -81,14 +83,14 @@
           <span class="icon-bar"></span>
         </button>
         <div class="col-xs-9 phone-nav">
-          <a class="navbar-brand" href="index.html" id="logo">Home</a>
+          <a class="navbar-brand" href="/" id="logo">Home</a>
         </div>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
-          <li><a href="visualizations.html">Visualizations</a></li>
-          <li><a href="ml.html">Predictive Analysis</a></li>
-          <li><a href="AprilTable.html">Data Source</a></li>
+          <li><a href="visualizations">Visualizations</a></li>
+          <li><a href="ml">Predictive Analysis</a></li>
+          <li><a href="april_table">Data Source</a></li>
         </ul>
       </div>
     </div>
@@ -102,46 +104,58 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>NYC Motor Vehicle Crashes:</h1>
-        <h2>Visualizations</h2>
-        <p>A collection of motor vehicle crashes that occured during April 2020 in New York City.</p>
+        <h2>Predictive Analysis</h2><br>
+        <p>With the use of machine learning, the given dataset was used to forecast the likely borough of a crash and the riskiest hour to drive in NYC.</p>
       </div>
     </div>
   </div>
+<br><br>
 
-  
- <div class="row">
-      <div class="col-md-12">
-        <div class="well">
-          <h2>Crashes Total & Injury Total by Borough</h2>
-          <h5>The chart below highlights the total value of crashes and injuries as well as the value per 100,000 in each borough. Select the buttons below to filter the data. </h5>
-          <br>
-          <button id="0" type="button" >Raw Data</button>
-          <button id="1" type="button" >Per 100,000</button>
-          <br><br>
-          <!--Chart Section-->
-          <canvas id="forecast" width="300" height="150"></canvas>
-          <br><br><br>
-      </div>
+<div class = "page-header">
+    <h3>
+       Linear Regression<br>
+       <small>Comparing the Frequency of Accidents to the Hour of Accidents.</small>
+    </h3>
 
-<!--Pie Chart Section-->
-<h2>Breakdown of Injuries</h2>
-<h5>Select a borough below to show a breakdown of the injuries by motorist, pedestrian, and cyclist</h5>
-<div id="chartdiv1" style="width: 800px; height: 600px;"></div>
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="../static/images/scatter-lr.png" alt="Scatter Plot" style = "width:40%">
 
-<!--Map Frame Section-->
- <h2>Location of Crashes - April 2020</h2>    
- <h5>Borough Color Represents Desity of Crashes in NYC April 2020</h5> 
+<img src="../static/images/scatter-lr2.png" alt="Linear Regression" style = "width:40%">
+ </div>
 
-<!--MapBox GL-->
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 
-<!--FRAMED MAP INFORMATION-->
-<script src="static/js/map.js"></script>
-  <div id="map" style="width: 800px; height: 600px;"></div>
-     
-    </div>
-  </div>
+<!--KNN-->
+<div class = "page-header">
+    <h3>
+       K Nearest Neighbor<br>
+       <small>Key features were utilized to predict the borough based off of accident features.</small>
+    </h3>
+
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="../static/images/knn.png" alt="Scatter Plot" style = "width:40%">
+
+<img src="" alt="Linear Regression" style = "width:40%">
+ </div>
+
+<!--Decision Tree-->
+<div class = "page-header">
+    <h3>
+       Random Forest Classification & Decision Tree<br>
+       <small>Utilized important features (Borough, Persons Injured, and Hour) to determine the liklihood of a fatality.</small>
+    </h3>
+
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="../static/images/features.png" alt="Features Importance" style = "width:40%">
+
+<img src="../static/images/decision_tree2.png" alt="Decision Tree" style = "width:100%">
+ </div>
+
+
+
+
 </center>
 </body>
 
