--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>An Analysis of NYC Motor Vehicle Crashes</title>
+  <title>NYC Motor Vehicle Crashes - April 2020</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
 
@@ -16,8 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <!--BootStrap-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
-<!--CSS-->
+  <!--CSS-->
   <script src="static/css/css.js"></script>
 <!-- AmCharts -->
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
@@ -32,10 +31,9 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 <!--JQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="static/js/event.js"></script>
 <!--Chart JS-->
-  <script src="static/js/button.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/button.js"></script>
+  <script src="static/js/bar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/bar.js"></script>
 <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 <!--JS-->
@@ -63,8 +61,7 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/button.js"></script>
-  <script src="static/js/event.js"></script>
+  <script src="static/js/bar.js"></script>
   <script src="static/js/pie.js"></script>
   <script src="static/js/map.js"></script> 
   <script type="text/javascript" src="static/js/config.js"></script>
@@ -83,14 +80,14 @@
           <span class="icon-bar"></span>
         </button>
         <div class="col-xs-9 phone-nav">
-          <a class="navbar-brand" href="index.html" id="logo">Home</a>
+          <a class="navbar-brand" href="/" id="logo">Home</a>
         </div>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
-          <li><a href="visualizations.html">Visualizations</a></li>
-          <li><a href="ml.html">Predictive Analysis</a></li>
-          <li><a href="AprilTable.html">Data Source</a></li>
+          <li><a href="visualizations">Visualizations</a></li>
+          <li><a href="ml">Predictive Analysis</a></li>
+          <li><a href="april_table">Data Source</a></li>
         </ul>
       </div>
     </div>
@@ -104,31 +101,48 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>NYC Motor Vehicle Crashes:</h1>
-        <h2>An Analysis</h2>
-        <p>This web page is dedicated to a visualized study of the motor vehicle crashes that occured in New York City during the month April 2020. <br>
-      </p>
+        <h2>Visualizations</h2>
+        <p>A collection of motor vehicle crashes that occured during April 2020 in New York City.</p>
       </div>
     </div>
   </div>
 
-<a class="btn btn-primary" href="visualizations.html" role="button">Visualizations</a>
-<a class="btn btn-primary" href="ml.html" role="button">Predictive Analysis</a>
-<a class="btn btn-primary" href="AprilTable.html" role="button">Data Source</a>
-<br><br>
-<!--Image-->
-<div class="row">
-  <div class="col-md-12">
-    <div class="thumbnail">
-        <img src="images/nyc.jpeg" alt="NYC Traffic" style="width:100%">
+  
+ <div class="row">
+      <div class="col-md-12">
+        <div class="well">
+          <h2>Crashes Total & Injury Total by Borough</h2>
+          <h5>The chart below highlights the total value of crashes and injuries as well as the value per 100,000 in each borough. Select the buttons below to filter the data. </h5>
+          <br>
+          <button id="0" type="button" >Raw Data</button>
+          <button id="1" type="button" >Per 100,000</button>
+          <br><br>
+          <!--Chart Section-->
+          <canvas id="forecast" width="300" height="150"></canvas>
+          <br><br><br>
+      </div>
+
+<!--Pie Chart Section-->
+<h2>Breakdown of Injuries</h2>
+<h5>Select a borough below to show a breakdown of the injuries by motorist, pedestrian, and cyclist</h5>
+<div id="chartdiv1" style="width: 800px; height: 600px;"></div>
+
+<!--Map Frame Section-->
+ <h2>Location of Crashes - April 2020</h2>    
+ <h5>Borough Color Represents Desity of Crashes in NYC April 2020</h5> 
+
+<!--MapBox GL-->
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
+
+<!--FRAMED MAP INFORMATION-->
+<script src="../static/js/map.js"></script>
+  <div id="map" style="width: 800px; height: 600px;"></div>
+     
+    </div>
   </div>
-</div>
-</div>
-<span>Photo by <a href="https://unsplash.com/@tatavo?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Luiz Guimaraes</a> on <a href="https://unsplash.com/s/photos/nyc-traffic?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 </center>
-
 </body>
-
-
 
 </html>
 
