--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -136,7 +136,9 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 
 <!--FRAMED MAP INFORMATION-->
+<script src="../static/js/secrets.js"></script>
 <script src="../static/js/map.js"></script>
+  
   <div id="map" style="width: 800px; height: 600px;"></div>
      
     </div>
