--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -12,12 +12,14 @@
 
 
 <!-- D3 CDN -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.js" integrity="sha512-2nLXOoZV+KjQ2441hhAziFojHuDNA26V75wBlz4ll24UNZAjqG0u26ap7NmVVRXqNL+g9jCtueOplEune26/tA==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js" integrity="sha512-0XfwGD1nxplHpehcSVI7lY+m/5L37PNHDt+DOc7aLFckwPXjnjeA1oeNbru7YeI4VLs9i+ADnnHEhP69C9CqTA==" crossorigin="anonymous"></script>
+<script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="../static/js/d3.js"></script>
+<script type="text/javascript" src="../static/js/d3.min.js"></script>
+
 <!--BootStrap-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <!--CSS-->
-  <script src="static/css/css.js"></script>
 <!-- AmCharts -->
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
@@ -36,9 +38,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/bar.js"></script>
 <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-<!--JS-->
-  <script src="static/js/app.js"></script>
-
+  <script type="text/javascript" src="../static/js/secrets.js"></script>
+  <script type="text/javascript" src="../static/js/bar.js"></script>
+  <script type="text/javascript" src="../static/js/pie.js"></script>
+  <script type="text/javascript" src="../static/js/map.js"></script>
 </head>
 
 <body>
@@ -47,10 +50,16 @@
 <!--MapBox GL-->
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
-  <!--D3-->   
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-<!--Chart JS-->
+ <!-- D3 CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.js" integrity="sha512-2nLXOoZV+KjQ2441hhAziFojHuDNA26V75wBlz4ll24UNZAjqG0u26ap7NmVVRXqNL+g9jCtueOplEune26/tA==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js" integrity="sha512-0XfwGD1nxplHpehcSVI7lY+m/5L37PNHDt+DOc7aLFckwPXjnjeA1oeNbru7YeI4VLs9i+ADnnHEhP69C9CqTA==" crossorigin="anonymous"></script>
+  <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../static/js/d3.js"></script>
+  <script type="text/javascript" src="../static/js/d3.min.js"></script>
+
+
+
+  <!--Chart JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>
 <!--AMCharts JS-->
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
@@ -61,10 +70,12 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/bar.js"></script>
-  <script src="static/js/pie.js"></script>
-  <script src="static/js/map.js"></script> 
-  <script type="text/javascript" src="static/js/config.js"></script>
+
+  <script type="text/javascript" src="../static/js/secrets.js"></script>
+  <script type="text/javascript" src="../static/js/bar.js"></script>
+  <script type="text/javascript" src="../static/js/pie.js"></script>
+  <script type="text/javascript" src="../static/js/map.js"></script>
+
 
 <!--Body-->
 <!--Navbar-->
@@ -112,37 +123,57 @@
       <div class="col-md-12">
         <div class="well">
           <h2>Crashes Total & Injury Total by Borough</h2>
-          <h5>The chart below highlights the total value of crashes and injuries as well as the value per 100,000 in each borough. Select the buttons below to filter the data. </h5>
+          <h5>The chart below highlights the total value of crashes and injuries as well as the value per 100,000 in each borough. <br>Select the buttons below to filter the data. </h5>
           <br>
           <button id="0" type="button" >Raw Data</button>
           <button id="1" type="button" >Per 100,000</button>
           <br><br>
-          <!--Chart Section-->
-          <canvas id="forecast" width="300" height="150"></canvas>
-          <br><br><br>
-      </div>
+  <!--Chart Section-->
+  <canvas id="forecast" width="300" height="150"></canvas>
+  <br><br><br>
+</div>
+
 
 <!--Pie Chart Section-->
 <h2>Breakdown of Injuries</h2>
 <h5>Select a borough below to show a breakdown of the injuries by motorist, pedestrian, and cyclist</h5>
-<div id="chartdiv1" style="width: 800px; height: 600px;"></div>
+<script type="text/javascript" src="../static/js/pie.js"></script>
+<div id="charts" style="width: 800px; height: 600px;"></div>
+
+<!--Bar Chart-->
+<h2>Cause of Crashes</h2>    
+<h5>Top 10 Factors of Crashes in NYC</h5> 
+
+<!--BAR CHART -->
+<div id="chart-div" style="width: 800px; height: 600px;"></div>
+<script type="text/javascript" src="../static/js/factorbar.js"></script>
+
 
 <!--Map Frame Section-->
  <h2>Location of Crashes - April 2020</h2>    
  <h5>Borough Color Represents Desity of Crashes in NYC April 2020</h5> 
 
 <!--MapBox GL-->
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" rel="stylesheet" />
 
 <!--FRAMED MAP INFORMATION-->
-<script src="../static/js/secrets.js"></script>
-<script src="../static/js/map.js"></script>
+<script type="text/javascript" src="../static/js/secrets.js"></script>
+<script type="text/javascript" src="../static/js/map.js"></script>
   
-  <div id="map" style="width: 800px; height: 600px;"></div>
-     
+<div id="mapbox" style="width: 800px; height: 600px;"></div>
+<script>mapboxgl.accessToken = ACCESS_TOKEN;
+var map = new mapboxgl.Map({
+container: "mapbox",
+style: "mapbox://styles/jfett/ckjrxgubh2xn719s8w5ob42ks", // stylesheet location
+center: [-74.0060, 40.7128], // starting position [lng, lat]
+zoom: 9.5 // starting zoom
+});</script>
+
     </div>
   </div>
+
+
 </center>
 </body>
 
