--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -161,10 +161,10 @@
 <script type="text/javascript" src="../static/js/secrets.js"></script>
 <script type="text/javascript" src="../static/js/map.js"></script>
   
-<div id="mapbox" style="width: 800px; height: 600px;"></div>
+<div id="map1" style="width: 800px; height: 600px;"></div>
 <script>mapboxgl.accessToken = ACCESS_TOKEN;
 var map = new mapboxgl.Map({
-container: "mapbox",
+container: "map1",
 style: "mapbox://styles/jfett/ckjrxgubh2xn719s8w5ob42ks", // stylesheet location
 center: [-74.0060, 40.7128], // starting position [lng, lat]
 zoom: 9.5 // starting zoom
