--- a/templates/ml.html
+++ b/templates/ml.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Deeper Learning - NYC Motor Vehicle Crashes</title>
+  <title>Machine Learning - NYC Motor Vehicle Crashes</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
 
@@ -16,9 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <!--BootStrap-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
   <!--CSS-->
-  <script src="static/css/css.js"></script>
 <!-- AmCharts -->
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
@@ -32,14 +30,11 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 <!--JQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="static/js/event.js"></script>
 <!--Chart JS-->
-  <script src="static/js/button.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/button.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  
 <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-<!--JS-->
-  <script src="static/js/app.js"></script>
+
 
 </head>
 
@@ -63,11 +58,7 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/button.js"></script>
-  <script src="static/js/event.js"></script>
-  <script src="static/js/areachart.js"></script>
-  <script src="static/js/map.js"></script> 
-  <script type="text/javascript" src="static/js/config.js"></script>
+  <script src="../static/js/map.js"></script> 
 
 <!--Body-->
 <!--Navbar-->
@@ -105,53 +96,130 @@
       <div class="col-md-12 jumbotron text-center">
         <h1>NYC Motor Vehicle Crashes:</h1>
         <h2>Predictive Analysis</h2><br>
-        <p>With the use of machine learning, the given dataset was used to forecast the likely borough of a crash and the riskiest hour to drive in NYC.</p>
+        <p>With the use of machine learning, the given dataset was used to forecast the likely borough of a crash and the riskiest hour to drive in NYC.<br></p>
       </div>
     </div>
   </div>
-<br><br>
+
 
 <div class = "page-header">
+
+<!--Analysis-->
+<div class="row">
+  <div class="col-lg-8" style="float:none;margin:auto;">
+  
+
+  <!--Analysis-->
+  <h2>Machine Learning Analysis</h2>
+  <p>Overall, with the use of Machine Learning, we were able to complete a deeper analysis of the dataset of April NYC motor vehicle crashes. 
+    With the use of linear regression, K Nearest Neighbor, Random Forest Classification, and Decision Tree Classifiers we were able to dig in to the dataset
+    further than the basic information of crash totals, injury totals, and death totals as seen on the previous visualizations page. <br><br><br>
+    
+    <p>Through our algorithms we were able to determine what would be considered the hour of day in NYC that is most likely to experience a 
+      motor vehicle crash that leads to injury and to death.  While we see a positive correlation through the linear regression that the frequency of Accidents
+      increase as the hour increases, we do note with the DTC that the most likely hour for a crash to be fatal is the 1.5 Hour (1:30AM)
+    </p>
+  </p>
+</div>
+
+</div>
+</div>
+<br><br>
+  <!--Feature Correlation-->
+<h3>
+  Feature Correlation<br>
+  <small>See the below heat map for the correlation of features of the dataset. </small>
+</h3>
+<img src="../static/images/corr.png" alt="Linear Regression" style = "width:40%">
+
+<!--Linear Regression-->
     <h3>
        Linear Regression<br>
        <small>Comparing the Frequency of Accidents to the Hour of Accidents.</small>
     </h3>
 
  
- <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+ <p>With an overall accuracy of 45.5%, the linear regression model can predict the number of crashes expected to occur in New York City, by a given hour.<br>
+  <i>Note: The hours are given in a format of 0 to 23. </i></p>
 <img src="../static/images/scatter-lr.png" alt="Scatter Plot" style = "width:40%">
 
 <img src="../static/images/scatter-lr2.png" alt="Linear Regression" style = "width:40%">
- </div>
 
-
-<!--KNN-->
-<div class = "page-header">
-    <h3>
-       K Nearest Neighbor<br>
-       <small>Key features were utilized to predict the borough based off of accident features.</small>
-    </h3>
-
- 
- <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
-<img src="../static/images/knn.png" alt="Scatter Plot" style = "width:40%">
-
-<img src="" alt="Linear Regression" style = "width:40%">
- </div>
 
 <!--Decision Tree-->
-<div class = "page-header">
-    <h3>
-       Random Forest Classification & Decision Tree<br>
-       <small>Utilized important features (Borough, Persons Injured, and Hour) to determine the liklihood of a fatality.</small>
-    </h3>
 
- 
- <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+  <!--Analysis-->
+<div class="row">
+  <div class="col-lg-8" style="float:none;margin:auto;">
+  
+  <h3>
+     Random Forest Classification & Decision Tree<br>
+     <small>Utilized important features (Borough, Persons Injured, and Hour) to determine the liklihood of a fatality.</small>
+  </h3>
+
+
+<p>Using a Decision Tree Classifier, our model takes key features Borough, Persons Injured, and Hour of crash in to account to classify the hour of the day that is considered to be most fatal in New York City.  According to our model, at hour 1.5 (1:30AM) one can expect a crash to be fatal at the highest liklihood. Next likely is the hour 19.5 (6:30PM). These hour outputs seem to correlate with common lifestyles at each given time; 1:30AM can be impacted by decisions and contributing factors such as time of night and alcohol influence.  At 6:30PM, the NYC rush hour is still occuring as it is a common time to travel from work, which can lead to increased traffic and a higher liklihood of a crash, furthermore a fatal crash.  Further evaluation and data would be needed to find a direct correlation to these reasons. </p>
+</div>
 <img src="../static/images/features.png" alt="Features Importance" style = "width:40%">
 
 <img src="../static/images/decision_tree2.png" alt="Decision Tree" style = "width:100%">
+</div>
+
+<!--KNN Borough-->
+<div class = "page-header">
+    <h3>
+       K Nearest Neighbor<br>
+       <small>To test the KNN model, below see the KNN model for predicting the borough of an accident based off of the given latitude and longitude.</small>
+    </h3>
+
+ 
+ <p>With an accuracy of 99.4% the model can predict the Borough based off of latitude and longitude location of a crash. </p>
+<img src="../static/images/knn.png" alt="Scatter Plot" style = "width:40%">
  </div>
+
+<!--KNN All Categories Overall-->
+<div class = "page-header">
+  <h3>
+     K Nearest Neighbor<br>
+     <small>Using a KNN model for classifying, using key features such as injuries, deaths, and hour of crash, the model can classiy the borough most likely for the crash to occur.  </small>
+  </h3>
+
+
+<p> The model predicts the borough classifed by all features, including hour, with a 35% accuracy.<br> </p>
+<img src="../static/images/allknn.png" alt="All KNN" style = "width:40%">
+
+</div>
+
+<!--KNN Persons-->
+<div class = "page-header">
+  <h3>
+     K Nearest Neighbor<br>
+     <small>Using a KNN model for classifying, using key features such as injuries and deaths, the model can classiy the borough most likely for the crash to occur.  </small>
+  </h3>
+
+
+<p> The model predicts the borough classifed by overall persons injured and persons killed with a 27% accuracy.<br> </p>
+<img src="../static/images/personknn.png" alt="Persons KNN" style = "width:40%">
+
+</div>
+
+<!--KNN Types-->
+<div class = "page-header">
+  <h3>
+     K Nearest Neighbor<br>
+     <small>Using a KNN model for classifying, using key features such as injuries and deaths for their respective category, the model can classiy the borough most likely for the crash to occur.  </small>
+  </h3>
+
+
+<p> The model predicts the borough classifed by motorist injury and motorist deaths with a 27% accuracy.<br> 
+  The model predicts the borough classifed by cyclist injury and cyclist deaths with a 22% accuracy.<br>
+  The model predicts the borough classifed by pedestrian injury and pedestrian deaths with a 27% accuracy.<br></p>
+<img src="../static/images/motoristknn.png" alt="Motorist KNN" style = "width:40%">
+<img src="../static/images/cyclistknn.png" alt="Cyclist KNN" style = "width:40%">
+<img src="../static/images/pedestrianknn.png" alt="Pedestian KNN" style = "width:40%">
+
+</div>
+
 
 
 
