--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
   </div>
 
 <a class="btn btn-primary" href="visualizations" role="button">Visualizations</a>
-<a class="btn btn-primary" href="ml" role="button">Predictive Analysis</a>
+<a class="btn btn-primary" href="ml" role="button">Machine Learning</a>
 <a class="btn btn-primary" href="april_table" role="button">Data Source</a>
 <br><br>
 <!--Image-->
