--- a/templates/ml.html
+++ b/templates/ml.html
@@ -181,7 +181,7 @@
 <div class = "page-header">
   <h3>
      K Nearest Neighbor<br>
-     <small>Using a KNN model for classifying, using key features such as injuries, deaths, and hour of crash, the model can classiy the borough most likely for the crash to occur.  </small>
+     <small>Using a KNN model for classifying, using key features such as injuries, deaths, and hour of crash, the model can classify the borough most likely for the crash to occur.  </small>
   </h3>
 
 
@@ -194,7 +194,7 @@
 <div class = "page-header">
   <h3>
      K Nearest Neighbor<br>
-     <small>Using a KNN model for classifying, using key features such as injuries and deaths, the model can classiy the borough most likely for the crash to occur.  </small>
+     <small>Using a KNN model for classifying, using key features such as injuries and deaths, the model can classify the borough most likely for the crash to occur.  </small>
   </h3>
 
 
@@ -207,7 +207,7 @@
 <div class = "page-header">
   <h3>
      K Nearest Neighbor<br>
-     <small>Using a KNN model for classifying, using key features such as injuries and deaths for their respective category, the model can classiy the borough most likely for the crash to occur.  </small>
+     <small>Using a KNN model for classifying, using key features such as injuries and deaths for their respective category (motorist, cyclist, pedestrian), the model can classify the borough most likely for the crash to occur.  </small>
   </h3>
 
 
