--- a/templates/ml.html
+++ b/templates/ml.html
@@ -80,7 +80,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
           <li><a href="visualizations">Visualizations</a></li>
-          <li><a href="ml">Predictive Analysis</a></li>
+          <li><a href="ml">Analysis</a></li>
           <li><a href="april_table">Data Source</a></li>
         </ul>
       </div>
