--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -97,7 +97,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
           <li><a href="visualizations">Visualizations</a></li>
-          <li><a href="ml">Predictive Analysis</a></li>
+          <li><a href="ml">Machine Learning</a></li>
           <li><a href="april_table">Data Source</a></li>
         </ul>
       </div>
@@ -129,7 +129,8 @@
           <button id="1" type="button" >Per 100,000</button>
           <br><br>
   <!--Chart Section-->
-  <canvas id="forecast" width="300" height="150"></canvas>
+<canvas id="forecast" width="600" height="400"></canvas>
+ 
   <br><br><br>
 </div>
 
