--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,9 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/pie.js"></script>
-  <script src="static/js/map.js"></script> 
+  <script src="../static/js/pie.js"></script>
+  <script src="../static/js/map.js"></script> 
+  <script src="../static/js/secrets.js"></script>
 
 <!--Body-->
 <!--Navbar-->
