--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -75,6 +75,7 @@
   <script type="text/javascript" src="../static/js/bar.js"></script>
   <script type="text/javascript" src="../static/js/pie.js"></script>
   <script type="text/javascript" src="../static/js/map.js"></script>
+  <script type="text/javascript" src="../static/js/config.js"></script>
 
 
 <!--Body-->
