--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -164,7 +164,7 @@
 <script type="text/javascript" src="../static/js/map.js"></script>
   
 <div id="map1" style="width: 800px; height: 600px;"></div>
-<script>mapboxgl.accessToken = ACCESS_TOKEN;
+<script>mapboxgl.accessToken = "pk.eyJ1IjoiamZldHQiLCJhIjoiY2tpbnd4aGF6MGF6ZjJ6bXZhOGUzZHV6ayJ9.ZcEz2B11lxbc5aO2Qm4d9g";
 var map = new mapboxgl.Map({
 container: "map1",
 style: "mapbox://styles/jfett/ckjrxgubh2xn719s8w5ob42ks", // stylesheet location
